src/test/ui/in-band-lifetimes/elided-lifetimes.stderr
error: hidden lifetime parameters are deprecated, try `Foo<'_>`
  --> $DIR/elided-lifetimes.rs:16:12
   |
LL | fn foo(x: &Foo) {
   |            ^^^
   |
note: lint level defined here
  --> $DIR/elided-lifetimes.rs:12:9
   |
LL | #![deny(elided_lifetimes_in_paths)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error: hidden lifetime parameters are deprecated, try `Foo<'_>`
  --> $DIR/elided-lifetimes.rs:20:16
   |
LL | fn bar(x: &Foo<'_>) {
   |                ^^

error: aborting due to 2 previous errors

